[gd_scene load_steps=5 format=2]

[ext_resource path="res://SCRIPTS/shop.gd" type="Script" id=1]
[ext_resource path="res://CONTROLS/red_orb_shop.png" type="Texture" id=2]
[ext_resource path="res://CONTROLS/buy_btn.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="shop" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 211.0
margin_bottom = 376.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 210.0
margin_bottom = 376.0

[node name="red_orb" type="TextureRect" parent="Control/VBoxContainer"]
margin_right = 210.0
margin_bottom = 65.0
texture = ExtResource( 2 )

[node name="red_orb_purchase" type="TextureButton" parent="Control/VBoxContainer/red_orb"]
margin_left = 150.0
margin_top = 20.0
margin_right = 1044.0
margin_bottom = 703.0
rect_scale = Vector2( 0.04, 0.04 )
texture_normal = ExtResource( 3 )

[node name="name" type="Label" parent="Control/VBoxContainer/red_orb"]
margin_left = 72.0
margin_top = 16.0
margin_right = 131.0
margin_bottom = 30.0
text = "RED_ORB"

[node name="price" type="Label" parent="Control/VBoxContainer/red_orb"]
margin_left = 82.0
margin_top = 39.0
margin_right = 114.0
margin_bottom = 53.0
text = "2300"

[node name="godot" type="TextureRect" parent="Control/VBoxContainer"]
margin_top = 69.0
margin_right = 210.0
margin_bottom = 133.0
texture = ExtResource( 4 )

[node name="godot_purchase" type="TextureButton" parent="Control/VBoxContainer/godot"]
margin_left = 150.0
margin_top = 20.0
margin_right = 1044.0
margin_bottom = 703.0
rect_scale = Vector2( 0.04, 0.04 )
texture_normal = ExtResource( 3 )

[node name="name" type="Label" parent="Control/VBoxContainer/godot"]
margin_left = 72.0
margin_top = 16.0
margin_right = 131.0
margin_bottom = 30.0
text = "RED_ORB"

[node name="price" type="Label" parent="Control/VBoxContainer/godot"]
margin_left = 82.0
margin_top = 39.0
margin_right = 114.0
margin_bottom = 53.0
text = "2300"

[node name="main_screen_btn" type="TextureButton" parent="Control"]
margin_left = 80.0
margin_top = 160.0
margin_right = 144.0
margin_bottom = 224.0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="Control/VBoxContainer/red_orb/red_orb_purchase" to="." method="_on_red_orb_purchase_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/godot/godot_purchase" to="." method="_on_godot_purchase_pressed"]
[connection signal="pressed" from="Control/main_screen_btn" to="." method="_on_main_screen_btn_pressed"]
